// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CharacterCard > Mounted component with episodes 1`] = `
"<div class="character-card">
  <div class="character-card__figure"><img src="" alt="Name: (Rick Sanchez)" class="character-card__img"></div>
  <div class="character-card__body">
    <div class="character-card__name">Rick Sanchez</div>
    <div class="character-card__status">Alive</div>
    <div class="character-card__episodes">Episodes: 1</div>
  </div>
</div>"
`;

exports[`CharacterCard > Mounted component without episodes 1`] = `
"<div class="character-card">
  <div class="character-card__figure"><img src="" alt="Name: (Rick Sanchez)" class="character-card__img"></div>
  <div class="character-card__body">
    <div class="character-card__name">Rick Sanchez</div>
    <div class="character-card__status">Alive</div>
    <!--v-if-->
  </div>
</div>"
`;
